myRep/src/stylesheets/Home.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    /* border: 2px solid green; */
    font-family: Poppins;
}

a{
    color: black;
}


.body-home{
   display: flex;
    background-color: rgb(234, 232, 241);
    align-items: center;
}

.sidebar{
    width: 20%;
    height: 96vh;
    border-radius:0 2rem 2rem 0;
}

.home-main{
    background-color: rgb(234, 232, 241);
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.logo{
    font-size: 1.7rem;
    text-align: left;
    margin-left: 1rem;
    font-weight: 700;
    color: rgb(47, 95, 228);
}

.home-username{
    font-size: 0.7rem;
    text-align: left;
    margin-left: 1rem;
}
.navbar{
    margin-top: 3.5rem;
}

.navbar div{
    text-align: left;
    padding-left: 3rem;
    font-size: 1.3rem;
    padding: 1.5rem 1rem ;
    margin-left: 1rem;
    font-weight: 400;
    border-radius: 20px 0 0 5px;
    cursor: pointer;
}

.logout{
    position: absolute;
    text-align: center;
    margin-left: 2rem;
    bottom: 2rem;
    font-weight: 500;
}

.logout:hover{
    color: rgb(208, 44, 44);
    cursor: pointer;
}

.date-container{
    display: flex;
    margin-top: 1rem;
    margin-right: 2rem;
}

.main-bar-container{
    display: flex;
    justify-content: space-between;
    width: 93%;
    margin: 2rem 0;
    padding: 2rem 0;
    align-items: center;
     background-color: rgb(234, 232, 241);
}

.first-section-main-bar{
    display: flex;
    gap: 1rem;
   align-items: center;
}

.past-week-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 90%;
    height: 20rem;
    border: 1px solid rgb(49, 49, 49);
    margin-bottom: 3rem;
}

.past-week{
    margin-top: 1rem;
    width: 95%;
    text-align: left;
    font-size: 1.3rem;
    font-weight: 600;
    margin-bottom: 0.5rem;
    
}

.past-month-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 90%;
    height: 20rem;
    border: 1px solid rgb(49, 49, 49);
    margin-bottom: 3rem;
}

.past-month{
    margin-top: 1rem;
    width: 95%;
    text-align: left;
    font-size: 1.3rem;
    font-weight: 600;
    margin-bottom: 0.5rem;
    
}

.my-leads{
    font-weight: 600;
    font-size: 2rem;
    margin-right: 0.5rem;
}

.create-container{
    background-color: rgb(113, 61, 185);
    display: flex;
    place-items: center;
    padding: 0.5rem;
    border-radius: 3px;
}

.create{
    color: white;
    font-size: 0.8rem;
    cursor: pointer;
}

.search{
    border: none;
    border-left: 1px solid rgb(113, 61, 185);
    border-bottom: 1px solid rgb(113, 61, 185);
    background-color: transparent;
    height: 2rem;
    width: 8rem;
    transition: 0.3s;
    letter-spacing: 2px;
    padding-left: 0.6rem;
}

.search:hover{
    width: 12rem;
}

.search::placeholder{
    color: rgb(113, 61, 185);
}

.search:focus{
    outline: none;
}
.sort-icon{
    width: 20px;
    cursor: pointer;
}

.lead-card{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    align-content: center;
    width: 90%;
    height: 2.5em;
    border-radius: 3px;
    background-color: #FFFAFA;
    margin-top: 0.5rem;
}

.lead-card > div{
    font-size: 0.9rem;
    font-weight: 500;
}

.lead-name{
    color: rgb(113, 61, 185);
    text-decoration: underline;
}

